deploy/k8s/istio/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-virtualservice
  namespace: argocd
spec:
  hosts:
  - argocd.ghantas.com
  gateways:
  - argocd-gateway
  http:
  - name: argocd-routing
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        subset: argocd-service-subset
        port:
          number: 80
