deploy/k8s/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: destinationrule
spec:
  host: catalog-api.eshop.svc.cluster.local
  subsets:
  - name: catalog-service-subset
    labels:
      app: catalog-api
      release: catalog-api
