deploy/k8s/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtualservice
spec:
  hosts:
  - eshop.ghantas.com
  - catalog-api.eshop.svc.cluster.local
  gateways:
  - eshop-gateway
  http:
  - name: catalog-grpc-route
  # GRPC API ROUTES FOLLOW THE CONVENTION OF <service_name>.<package_name>/<method_name>
  # For example, the Catalog service has a method called GetCatalogItems, so the route for that method would be /Catalog.Catalog/GetCatalogItems
  # The gRPC route is configured to route all requests that start with /Catalog.Catalog/ or /eshop.catalog.Catalog
    match:
    - uri:
        prefix: /CatalogAPI.Catalog/
    route:
    - destination:
        host: catalog-api.eshop.svc.cluster.local
        port:
          number: 9081    # Default gRPC port configured on catalog-api service
        subset: catalog-service-subset
  - name: catalog-service-short-routing
    match:
    - uri:
        regex: /webshoppingapigw/c/(.*)
    rewrite:
      uriRegexRewrite:
        match: "/webshoppingapigw/c/(.*)"
        rewrite: /catalog-api/\1
    route:
    - destination:
        host: catalog-api.eshop.svc.cluster.local
        port:
          number: 8081
        subset: catalog-service-subset
  - name: catalog-service-long-routing
    match:
    - uri:
        regex: /webshoppingapigw/catalog-api/(.*)
    rewrite:
      uriRegexRewrite:
        match: "/webshoppingapigw/catalog-api/(.*)"
        rewrite: /catalog-api/\1
    route:
    - destination:
        host: catalog-api.eshop.svc.cluster.local
        port:
          number: 8081
        subset: catalog-service-subset

  
  - name: basket-service-short-routing
    match:
    - uri:
        regex: /webshoppingapigw/b/(.*)
    rewrite:
      uriRegexRewrite:
        match: "/webshoppingapigw/b/(.*)"
        rewrite: /basket-api/\1
    route:
    - destination:
        host: basket-api.eshop.svc.cluster.local
        subset: basket-service-subset
  - name: basket-service-long-routing
    match:
    - uri:
        regex: /webshoppingapigw/basket-api/(.*)
    rewrite:
      uriRegexRewrite:
        match: "/webshoppingapigw/basket-api/(.*)"
        rewrite: /basket-api/\1
    route:
    - destination:
        host: basket-api.eshop.svc.cluster.local
        subset: basket-service-subset

  - name: ordering-service-short-routing
    match:
    - uri:
        regex: /webshoppingapigw/o/(.*)
    rewrite:
      uriRegexRewrite:
        match: "/webshoppingapigw/o/(.*)"
        rewrite: /ordering-api/\1
    route:
    - destination:
        host: ordering-api.eshop.svc.cluster.local
        subset: ordering-service-subset
  - name: ordering-service-long-routing
    match:
    - uri:
        regex: /webshoppingapigw/ordering-api/(.*)
    rewrite:
      uriRegexRewrite:
        match: "/webshoppingapigw/ordering-api/(.*)"
        rewrite: /ordering-api/\1
    route:
    - destination:
        host: ordering-api.eshop.svc.cluster.local
        subset: ordering-service-subset
        
  - name: webspa-routing
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: webspa.eshop.svc.cluster.local
        subset: webspa-service-subset
